build/log/idf_py_stdout_output_10064
[1/9] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Users\MELBEN\esp\uart_async_rxtxtasks\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.4_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.4/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/MELBEN/esp/uart_async_rxtxtasks/build/bootloader/bootloader.bin"
Bootloader binary size 0x5210 bytes. 0x2df0 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/fingerprint/CMakeFiles/__idf_fingerprint.dir/fingerprint.c.obj
FAILED: esp-idf/fingerprint/CMakeFiles/__idf_fingerprint.dir/fingerprint.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.4-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/MELBEN/esp/uart_async_rxtxtasks/build/config -IC:/Users/MELBEN/esp/uart_async_rxtxtasks/components/fingerprint -IC:/Espressif/frameworks/esp-idf-v5.4/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.4/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.4/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.4/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_hw_support/include/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_hw_support/debug_probe/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_hw_support/port/esp32s3/. -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_hw_support/port/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/heap/tlsf -IC:/Espressif/frameworks/esp-idf-v5.4/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.4/components/soc/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/soc/esp32s3/register -IC:/Espressif/frameworks/esp-idf-v5.4/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/hal/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_rom/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_rom/esp32s3/include/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_rom/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.4/components/xtensa/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.4/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.4/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.4/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.4/components/lwip/port/esp32xx/include/sys -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_driver_uart/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/vfs/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_driver_gpio/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/MELBEN/esp/uart_async_rxtxtasks=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.4=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/fingerprint/CMakeFiles/__idf_fingerprint.dir/fingerprint.c.obj -MF esp-idf\fingerprint\CMakeFiles\__idf_fingerprint.dir\fingerprint.c.obj.d -o esp-idf/fingerprint/CMakeFiles/__idf_fingerprint.dir/fingerprint.c.obj -c C:/Users/MELBEN/esp/uart_async_rxtxtasks/components/fingerprint/fingerprint.c
In file included from C:/Users/MELBEN/esp/uart_async_rxtxtasks/components/fingerprint/fingerprint.c:1:
C:/Users/MELBEN/esp/uart_async_rxtxtasks/components/fingerprint/include/fingerprint.h:77:16: error: 'DEFAULT_ADDRESS' undeclared here (not in a function); did you mean 'DEFAULT_BAUD_RATE'?
   77 |     .address = DEFAULT_ADDRESS,
      |                ^~~~~~~~~~~~~~~
      |                DEFAULT_BAUD_RATE
C:/Users/MELBEN/esp/uart_async_rxtxtasks/components/fingerprint/include/fingerprint.h:217:27: warning: 'set_address_cmd' defined but not used [-Wunused-variable]
  217 | static FingerprintCommand set_address_cmd = {
      |                           ^~~~~~~~~~~~~~~
C:/Users/MELBEN/esp/uart_async_rxtxtasks/components/fingerprint/include/fingerprint.h:202:27: warning: 'read_syspara_cmd' defined but not used [-Wunused-variable]
  202 | static FingerprintCommand read_syspara_cmd = {
      |                           ^~~~~~~~~~~~~~~~
C:/Users/MELBEN/esp/uart_async_rxtxtasks/components/fingerprint/include/fingerprint.h:187:27: warning: 'empty_cmd' defined but not used [-Wunused-variable]
  187 | static FingerprintCommand empty_cmd = {
      |                           ^~~~~~~~~
C:/Users/MELBEN/esp/uart_async_rxtxtasks/components/fingerprint/include/fingerprint.h:174:27: warning: 'delet_char_cmd' defined but not used [-Wunused-variable]
  174 | static FingerprintCommand delet_char_cmd = {
      |                           ^~~~~~~~~~~~~~
C:/Users/MELBEN/esp/uart_async_rxtxtasks/components/fingerprint/include/fingerprint.h:159:27: warning: 'store_char_cmd' defined but not used [-Wunused-variable]
  159 | static FingerprintCommand store_char_cmd = {
      |                           ^~~~~~~~~~~~~~
C:/Users/MELBEN/esp/uart_async_rxtxtasks/components/fingerprint/include/fingerprint.h:144:27: warning: 'match_cmd' defined but not used [-Wunused-variable]
  144 | static FingerprintCommand match_cmd = {
      |                           ^~~~~~~~~
C:/Users/MELBEN/esp/uart_async_rxtxtasks/components/fingerprint/include/fingerprint.h:129:27: warning: 'search_cmd' defined but not used [-Wunused-variable]
  129 | static FingerprintCommand search_cmd = {
      |                           ^~~~~~~~~~
C:/Users/MELBEN/esp/uart_async_rxtxtasks/components/fingerprint/include/fingerprint.h:116:27: warning: 'reg_model_cmd' defined but not used [-Wunused-variable]
  116 | static FingerprintCommand reg_model_cmd = {
      |                           ^~~~~~~~~~~~~
C:/Users/MELBEN/esp/uart_async_rxtxtasks/components/fingerprint/include/fingerprint.h:101:27: warning: 'gen_char2_cmd' defined but not used [-Wunused-variable]
  101 | static FingerprintCommand gen_char2_cmd = {
      |                           ^~~~~~~~~~~~~
C:/Users/MELBEN/esp/uart_async_rxtxtasks/components/fingerprint/include/fingerprint.h:88:27: warning: 'gen_char1_cmd' defined but not used [-Wunused-variable]
   88 | static FingerprintCommand gen_char1_cmd = {
      |                           ^~~~~~~~~~~~~
C:/Users/MELBEN/esp/uart_async_rxtxtasks/components/fingerprint/include/fingerprint.h:75:27: warning: 'get_image_cmd' defined but not used [-Wunused-variable]
   75 | static FingerprintCommand get_image_cmd = {
      |                           ^~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
